# ollama-chat

./: .gitignore  CHANGELOG.md  INPUT.md  OUTPUT.md  README.md  agent.py  agents.json  batch.py  build_workflow.py  chat.py  chat_room.py  cli.py  collab.py  config.py  conversation.py  output.py  personas.json  personas.py  pyproject.toml  requirements.txt  sessions.py  setup.py  tools.py  workflow.py
src/ollama_chat/: __init__.py  agent.py  agents.json  batch.py  build_workflow.py  chat_room.py  cli.py  collab.py  conversation.py  handoffs.py  output.py  personas.py  sessions.py  workflow.py
