[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-chat"
version = "0.1.0"
description = "Multi-agent AI workflows with Ollama and Claude"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests",
    "langchain-core",
    "langchain-ollama",
    "langchain-anthropic",
    "langgraph",
    "rich",
]

[project.scripts]
ollama-chat = "ollama_chat.cli:main"
oc = "ollama_chat.cli:main"
oc-build = "ollama_chat.build_workflow:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ollama_chat = ["agents.json"]
